Trying to work with git and heroku

--- a/public/contact-form.html
+++ b/public/contact-form.html
@@ -1,6 +1,6 @@
 <div class="row" ng-hide="contact._id">
   <div class="col-md-6">
-      <h2>Create new contact</h2>
+      <h2>Create new contact Yo</h2>
   </div>
 </div>
 <div class="container">
